# parserc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/derive/: Cargo.toml
crates/derive/src/: keyword.rs  lib.rs  syntax.rs  token.rs  tuple.rs
crates/parserc/: Cargo.toml
crates/parserc/src/: c.rs  combinators.rs  errors.rs  input.rs  lang.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs  tokenizer.rs
crates/parserc/tests/: derive.rs
crates/pattex/: Cargo.toml
crates/pattex/src/: errors.rs  input.rs  lib.rs  pattern.rs
crates/pattex/src/pattern/: class.rs  digits.rs  escape.rs  expr.rs  mod.rs  repeat.rs  token.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
