[package]
description = "proc-macros for `parserc`"
documentation = "https://docs.rs/parserc-derive"
edition = "2024"
license = "MIT"
name = "parserc-derive"
repository = "https://github.com/markdown-labs/parserc/crates/derive"
version.workspace = true


[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full"] }

[lib]
proc-macro = true
