[package]
description = "proc-macros for `parserc`"
documentation = "https://docs.rs/parserc-derive"
edition = "2024"
license = "MIT"
name = "parserc-derive"
repository = "https://github.com/stylang/parserc/crates/derive"
version.workspace = true


[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full"] }
convert_case = "0.8.0"

[lib]
proc-macro = true
